--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,13 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.6</version>
 		</dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
